--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ru">
 <head>
-<link rel="stylesheet" href="assets/styles.css">
-<link rel="stylesheet" href="assets/button.css">
+    <meta charset='utf-8'>
+    <meta name="referrer" content="no-referrer" />
+    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="assets/button.css">
 </head>
 <body class="hidden" onClick="Main.focus()">
     <table>
@@ -24,7 +26,7 @@
             <th></th>
         </tr>
     </table>
-<script src="assets/assets.js" type="text/javascript" charset="utf-8"></script>
+<script src="assets/assets.js"></script>
 <script>
 // Список файлов
     new Assets(
